<resources>
    <string name="app_name">「明星臉比一比」</string>
    <string name="action_settings">Settings</string>
    <string name="introduction">" 「明星臉比一比」名人相似度分析"\n""\n"這是一個電腦視覺APP， 可以分析照片中的人長的像哪些知名人物"\n""\n"想知道自己長的像哪些大明星嗎？"\n""\n"上傳一張你的照片，讓我們告訴你吧！"</string>
    <string name="choose">選擇檔案</string>
    <string name="start">開始分析</string>
    <string name="title_activity_main2">選擇人臉</string>
    <string name="select">請選一個人臉分析</string>
    <string name="title_activity_main3">分析結果</string>
    <string name="ratio">Ratio</string>
    <string name="name">Name</string>
    <string name="seekbar_text">可調整男女顯示比例</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="face_ratio_title">人臉相對於整張照片比例</string>
    <string name="menu_restart">返回首頁</string>
    <string name="menu_setting">設定</string>
    <string name="menu_about">關於</string>
    <string name="enlarge_title">選擇區域放大</string>
    <string name="server_title">Server</string>
    <string name="about_title1">使用說明</string>
    <string name="about_text1">* 很簡單，你唯一需要做的事情就是在首頁畫面上，選擇一張圖片之後按下『開始分析』"\n"* 我們目前支援jpg, png, bmp格式的圖片，圖片中人物必須清晰。</string>
    <string name="about_title2">運作原理</string>
    <string name="about_text2">我們事先收集了大量知名人物的圖片，讓程式學習這些人物的長相，訓練出一個模型。之後當你上傳一張圖片到我們伺服器進行分析時，就會代入這個模型進行分析。</string>
    <string name="about_title3">隱私聲明</string>
    <string name="about_text3">為了分析照片相似度，我們會將您所選定的照片上傳到我們的伺服器進行分析，您的照片僅作為分析相似度使用，且分析完成之後即立即刪除。我們不會儲存、出售、交換或出租您的照片給其他團體或個人，或用於上述目的以外之其他用途。</string>
    <string name="title_activity_about">關於</string>
    <string name="about_title4">致謝</string>
    <string name="about_text4">感謝 王建瓏、黃凱泓、林祥慶、楊曜彰、賀先郁、葉俊廷、謝高丰、程信翰、莊英廷、顧詠涵 協助圖片資料顧收集。</string>
    <string name="about_title5">關於</string>
    <string name="about_text5">「明星臉比一比」名人相似度分析"\n"Copyright © 2019 蔡文傑、王鈺云. All rights reserved</string>


    <string-array name="enlarge_array">
        <item>0%</item>
        <item>30%</item>
        <item>60%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>

    <string-array name="enlarge_value_array">
        <item>0%</item>
        <item>30%</item>
        <item>60%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>

    <string-array name="server_array">
        <item>server 1</item>
        <item>server 2</item>
    </string-array>

    <string-array name="server_value_array">
        <item>server 1</item>
        <item>server 2</item>
    </string-array>
</resources>
