<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="0.0002"
        android:inputType="text"
        android:key="face_ratio"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/face_ratio_title"
        android:icon="@drawable/ic_face_black_24dp"/>

    <ListPreference
        android:defaultValue="0.3"
        android:entries="@array/enlarge_array"
        android:entryValues="@array/enlarge_value_array"
        android:key="enlarge"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/enlarge_title"
        android:icon="@drawable/ic_zoom_in_black_24dp"/>

    <ListPreference
        android:defaultValue="server 1"
        android:entries="@array/server_array"
        android:entryValues="@array/server_value_array"
        android:key="server"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/server_title"
        android:icon="@drawable/ic_computer_black_24dp"/>
</PreferenceScreen>